# mouse-pilot

./: .gitignore  Cargo.toml  Makefile  README.md  RELEASE.md  build.rs
.github/workflows/: release.yml  test.yml
assets/: Info.plist  icon.icns  icon.rc
scripts/: build_macos.sh  build_windows.sh  create_icon.sh
src/: event.rs  font.rs  hotkey.rs  icon_data.rs  key.rs  lib.rs  macro_manager.rs  main.rs  player.rs  recorder.rs  state.rs  ui.rs
tests/: convert_icon.rs
