[package]
name = "mousepilot"
version = "0.1.0"
edition = "2024"
authors = ["Your Name"]
description = "A cross-platform mouse and keyboard macro recorder"

[dependencies]
autopilot = "0.4"
device_query = "4.0"
tokio = { version = "1", features = ["full"] }
eframe = "0.32"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
chrono = "0.4"
log = "0.4"
env_logger = "0.11"