[package]
name = "mousepilot"
version = "0.1.0"
edition = "2024"
authors = ["Your Name"]
description = "A cross-platform mouse and keyboard macro recorder"

[dependencies]
autopilot = "0.4"
device_query = "4.0"
# tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync"] }
eframe = { version = "0.32" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"
dotenvy = "0.15"
parking_lot = "0.12"
dirs = "6.0"

[build-dependencies]
embed-resource = "3.0"

[dev-dependencies]
image = "0.25"

[profile.release]
opt-level = 'z'
lto = "thin"
panic = "abort"
strip = true

[lints.clippy]
new_without_default = "allow"
# uninlined_format_args = "allow"
redundant_clone = "deny"